@startuml

!include ../../../commons.style
skinparam ranksep 50

abstract class OccurencyCounter <<AbstractAlgorithm>> {
  + <<process>> handle()
  __
  - preprocess()
  - count()
  ~ {abstract} <<operation>> display()
  - postprocess()
}

class AscendingCounter <<ConcreteAlgorithm>> {
  ~  <<operation>> display()
}

class DescendingCounter <<ConcreteAlgorithm>> {
  ~  <<operation>> display()
}

OccurencyCounter <|-- AscendingCounter
OccurencyCounter <|-- DescendingCounter

@enduml
